<resources>
    <string name="app_name">Sych News</string>
    <string name="photo_desc">Nice photo</string>
    <string name="spec_first">Programmer</string>
    <string name="mail_recipient" translatable="false">sychyow@outlook.com</string>
    <string name="mail_subject">Mail from card app</string>
    <string name="spec_second">Photographer</string>
    <string name="spec_third">Chef</string>
    <string name="curriculum_vitae">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eleifend quis urna ut luctus. In eu scelerisque ligula. Nunc lacinia mauris vel sagittis rhoncus. Ut suscipit tincidunt feugiat. Proin eget ex non sem maximus aliquam ac et ligula. Fusce a purus pellentesque, finibus ligula a, consectetur lorem. Fusce ut bibendum lacus.</string>
    <string name="message_tip">Enter your message</string>
    <string name="send_mail">send message</string>
    <string name="full_name">Dmitry Sychyow</string>
    <string name="copyright">© Dmitri Sychyow, 2018</string>
    <string name="no_mail">Mail app not available</string>
    <string name="empty_message">Enter the message first</string>
    <string name="menu_about">About</string>
    <string name="image_desc">Illustration</string>
    <string name="retry">Retry</string>
    <string name="error_server">Server error:</string>
    <string name="error_network">Network error:</string>
    <string name="select_theme">Select theme</string>
    <string name="welcome">Welcome!</string>
    <string name="menu_update">Update</string>
    <string name="edit_title">Title:</string>
    <string name="edit_short_text">Short text:</string>
    <string name="hint_title">News title</string>
    <string name="hint_short">Short text</string>
    <string name="btn_save">save</string>
    <string name="btn_edit">Edit</string>
    <string name="hint_news_text">News text</string>
    <string name="et_full_text">NewsText</string>
    <string name="logo">logo</string>
    <string name="delete">delete</string>
    <string name="channel_name">SychNews</string>
    <string name="channel_description">Sych News notifications</string>
</resources>
